Update and rename TasMel Itinerary.html to index.html
renamed file. changed name for js file in script.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
   <div class="container" id="itinerary-container"></div>
 
-  <script src="Itinerary_tasmel_data.js"></script>
+  <script src="tasmel_data.js"></script>
 <script>
     const container = document.getElementById('itinerary-container');
 
