--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <!-- Itinerary content goes here -->
         <div id="itinerary-container"></div>
     </div>
-
+    <script src="weather_data.js"></script>
     <script src="tasmel_data.js"></script>
     <script>
 
