--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
   <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
     <div style="display: flex; flex-direction: row; align-items: center;">
     <span class="date" style="font-weight: bold; color: #333;">${day.date}</span>
-    <span class="date" style="font-weight: bold; color: #333;">${day.day}</span>
+    <span class="date" style="font-weight: bold; color: #333;">(${day.day})</span>
      <span class="location-weather" style="color: #888; margin-left: 10px;">${day.location}</span>
     </div>
     <span class="material-icons" style="color: #00A878;">expand_more</span>
